--- a/src/styles/work/work-show.scss
+++ b/src/styles/work/work-show.scss
@@ -1,33 +1,44 @@
 @import '../variables';
 
-.work__show__container {
+.hero__header {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  padding: 20% 0 0 0;
+  margin-bottom: -15%;
 }
 
-.work__show__container h1 {
+.hero__header h1 {
   color: #fff;
   font-size: 4.5em;
   text-align: center;
+  justify-content: center;
   margin-bottom: 0;
   margin-top: -5%;
 }
 
-.work__show__container h2 {
+.hero__header h2 {
   color: #fff;
-  font-size: 3.8em;
+  font-size: 2.8em;
   text-align: center;
   margin-top: 0;
 }
 /* */
 
+.work__hero__container {
+  padding: 32.5% 15% 0 15%;
+  margin-top: 0px;
+  // position: absolute;
+  display:flex;
+  flex-direction:row;
+  flex-wrap:wrap;
+}
+
 .work__main__container {
   padding: 0 15% 0 15%;
-  margin-top: -100px;
-  position: absolute;
+  margin-top: 0px;
+  // position: absolute;
   display:flex;
   flex-direction:row;
   flex-wrap:wrap;
@@ -133,13 +144,16 @@
   .work__main__container {
     padding: 0 10% 0 10%;
   }
+  .work__hero__container {
+    padding: 0 10% 0 10%;
+  }
 }
 
 @media screen and (max-width: 768px) {
   .box-1, .box-2, .box-3, .box-4 {
     width: 100%;
   }
-  .work__show__container h1 {
+  .hero__header h1 {
     font-size: 3.5em;
   }
   .box-1 > h1 {
@@ -156,7 +170,7 @@
   .box-4 > li {
     font-size: 1em;
   }
-  .work__show__container h2 {
+  .hero__header h2 {
     font-size: 2.8em;
   }
   .work__main__container {
@@ -165,10 +179,10 @@
 }
 
 @media screen and (max-width: 576px) {
-  .work__show__container h1 {
+  .hero__header h1 {
     font-size: 2.5em;
   }
-  .work__show__container h2 {
+  .hero__header h2 {
     font-size: 1.8em;
   }
   .box-2 > h2 {
